--- a/Clase_2_Estructuras_de_repetición.ipynb
+++ b/Clase_2_Estructuras_de_repetición.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONfzKIw/Gq2t5WqrIZ9Gl/",
+      "authorship_tag": "ABX9TyMMZb2AcHrxJjKrS1faqYB6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -125,7 +125,7 @@
         "id": "CTt-iVETVQUy",
         "outputId": "3d207bf5-eb71-44c1-f084-aa1ed8ce65bd"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
         "id": "dRXMCVedXJTY",
         "outputId": "16209a0b-0e1a-4302-85db-42a6ca55fb71"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +313,7 @@
         "id": "Vt_l6xl4YQHX",
         "outputId": "ca1c5210-6f3b-4d68-e06f-f7257c3a9236"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,7 +450,7 @@
         "id": "ykK5wuUHaOuV",
         "outputId": "b1565fb3-48e3-4d91-bccb-02d58186057c"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,7 +489,7 @@
         "id": "R5SEMTR7dzJ6",
         "outputId": "8e547dc3-96ae-4ff5-f8b8-721f3bc6b8ef"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,7 +526,7 @@
         "id": "dk8NhzPCgRJ5",
         "outputId": "b63732e2-cf2f-4ad9-a745-d33b0db38879"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,7 +561,7 @@
         "id": "dfOeHCAxhCtY",
         "outputId": "05a7e087-a44c-4250-cf60-34313ec3ed60"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,6 +577,484 @@
             "7 x 8 = 56\n",
             "7 x 9 = 63\n",
             "7 x 10 = 70\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Listas\n",
+        "1. Es un tipo de datos\n",
+        "2. Todos los elementos de una lista, **deben** estar separados por comas\n",
+        "3. Forma  canónica para declarar una lista\n",
+        "\n",
+        "\n",
+        "```\n",
+        "(variable)=[]\n",
+        "```\n",
+        "ejemplo:\n",
+        "flores=[\"amapola\",\"tulipan\",\"lengua\"]\n",
+        "print(flores)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "E47SGW_oxAEu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dahlia= 3 #variable de tipo numérica, int\n",
+        "rosa= \"cinco\"#variable de tipo alfanumérico, str\n",
+        "flores=[\"amapola\",\"tulipan\",\"lengua de suegra\", dahlia]"
+      ],
+      "metadata": {
+        "id": "ftRhAcNLzKdg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Maual.\n",
+        "\n",
+        "```\n",
+        "Lista2=[dato1,dato2,dato3...datoN]\n",
+        "```\n",
+        "5. Son siempre finitas\n",
+        "6. Son indexadas\n",
+        "\n",
+        "\n",
+        "```\n",
+        "Lista2=[dato1,dato2,dato3...datoN]\n",
+        "```\n",
+        "\n",
+        "dato1 está en el index 0\n",
+        "dato2 está bucado en el index 1\n",
+        "\n",
+        "7. Estructuras **para** para la creación de listas\n",
+        "##Crea una lista de 5 elementos\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "VhnZefUXzLJM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flores = []\n",
+        "for loquesea in range(5):\n",
+        "  flores= (input(\"ingresa el nombre de una flor\"))\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ye2xRot1z5WE",
+        "outputId": "6ac07a5d-cf51-401d-a4f0-1aaf80726d54"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ingresa el nombre de una flormauro\n",
+            "ingresa el nombre de una florana\n",
+            "ingresa el nombre de una flor\n",
+            "ingresa el nombre de una flormaria\n",
+            "ingresa el nombre de una florsofia\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flores.index(\"mauro\")"
+      ],
+      "metadata": {
+        "id": "WTKmbouq3hJp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flores[len(flores)-1]"
+      ],
+      "metadata": {
+        "id": "Rpbm9ilx333B"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(flores)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9ZNnb4AR36qg",
+        "outputId": "4f631df7-b2ec-4467-f5ee-cff4d6decf4e"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flores"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "F1lfjuBy3-7M",
+        "outputId": "78aaf5a7-849e-426e-8e5c-167e7b304508"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'sofia'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Va"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NOPxKG4i66OK",
+        "outputId": "cd52e68c-089c-4aac-e7b4-ce48972fe232"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#EJERCICIO 1\n"
+      ],
+      "metadata": {
+        "id": "Ek5PJ9Eo9lrn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-55Sn8aW7t1R",
+        "outputId": "5294f0c9-6607-42d3-fa8d-7717e9a4e40c"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n"
+          ]
+        }
+      ],
+      "source": [
+        "numero = []\n",
+        "for i in range(11):\n",
+        "  numero.append(i+1)\n",
+        "print(numero)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(11):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xrUGQBZx9c41",
+        "outputId": "6e81c6d1-d18f-435a-b7a4-4d5c9c05be65"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#EJERCICIO 2"
+      ],
+      "metadata": {
+        "id": "A6KiGg0L9oTE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "numero_inicial = 0\n",
+        "for variable_inicial in range(101):\n",
+        "  numero_inicial = numero_inicial + variable_inicial\n",
+        "print(f\"el valor de la suma de todos los números del 1 al 100 es: {numero_inicial}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "maTBw4bt9gm0",
+        "outputId": "45a5b958-5b80-4681-83df-23bf8c39d1f2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "el valor de la suma de todos los números del 1 al 100 es: 5050\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = []\n",
+        "numero_inicial = 0\n",
+        "for variable_inicial in range(101):\n",
+        "  numero_inicial = numero_inicial + variable_inicial\n",
+        "  a.append(numero_inicial)\n",
+        "print(a)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LqypJSHD-uxz",
+        "outputId": "7c617a71-5cf4-4f8e-e86f-ff5e2a65e748"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 3, 6, 10, 15, 21, 28, 36, 45, 55, 66, 78, 91, 105, 120, 136, 153, 171, 190, 210, 231, 253, 276, 300, 325, 351, 378, 406, 435, 465, 496, 528, 561, 595, 630, 666, 703, 741, 780, 820, 861, 903, 946, 990, 1035, 1081, 1128, 1176, 1225, 1275, 1326, 1378, 1431, 1485, 1540, 1596, 1653, 1711, 1770, 1830, 1891, 1953, 2016, 2080, 2145, 2211, 2278, 2346, 2415, 2485, 2556, 2628, 2701, 2775, 2850, 2926, 3003, 3081, 3160, 3240, 3321, 3403, 3486, 3570, 3655, 3741, 3828, 3916, 4005, 4095, 4186, 4278, 4371, 4465, 4560, 4656, 4753, 4851, 4950, 5050]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#EJERCICIO3:"
+      ],
+      "metadata": {
+        "id": "lkMngEYj__Mj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "for variable in range(3,31,3):\n",
+        "  print(variable)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aEPF2yR5AA3K",
+        "outputId": "7db5ec95-f595-49bc-bdc2-05aeaf3eeea3"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "6\n",
+            "9\n",
+            "12\n",
+            "15\n",
+            "18\n",
+            "21\n",
+            "24\n",
+            "27\n",
+            "30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista = []\n",
+        "for variable in range(3,31,3):\n",
+        "  lista.append(variable)\n",
+        "print(lista)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "85Ov_gozBZxp",
+        "outputId": "ae69f06a-1d61-4dd3-97ce-b06e688a3598"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[3, 6, 9, 12, 15, 18, 21, 24, 27, 30]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Ejercicio 4"
+      ],
+      "metadata": {
+        "id": "1ghaGTYrCdbw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"multiplicar\")\n",
+        "a =int(input(\"digita la tabla del numero que quieres\"))\n",
+        "for variable in range(1,11,1):\n",
+        "  print(f\"{a} * {variable} = {variable*a}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KuFsMtYOB5bI",
+        "outputId": "4e256d2b-ea87-4255-a836-d72162883335"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "multiplicar\n",
+            "digita la tabla del numero que quieres4\n",
+            "4 * 1 = 4\n",
+            "4 * 2 = 8\n",
+            "4 * 3 = 12\n",
+            "4 * 4 = 16\n",
+            "4 * 5 = 20\n",
+            "4 * 6 = 24\n",
+            "4 * 7 = 28\n",
+            "4 * 8 = 32\n",
+            "4 * 9 = 36\n",
+            "4 * 10 = 40\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"multiplicar\")\n",
+        "lista = []\n",
+        "a =int(input(\"digita la tabla del numero que quieres\"))\n",
+        "for variable in range(1,11,1):\n",
+        "\n",
+        "  multiplicar = variable*a\n",
+        "  lista.append(multiplicar)\n",
+        "print(lista)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4sd-bgwcCZ9Q",
+        "outputId": "629516f7-e66f-4034-e5ea-413789392b56"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "multiplicar\n",
+            "digita la tabla del numero que quieres4\n",
+            "[4, 8, 12, 16, 20, 24, 28, 32, 36, 40]\n"
           ]
         }
       ]
